--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 <body ng-controller="mainCtrl">
 
 <div>
+<p>{{name}}</p>
+<show-pending></show-pending>
+
 <h2>pending</h2>
 	<form>
 		<input ng-model="query" placeholder="Search"/>
-		<button ng-click="getData()">Submit</button> 
+		<button show-pending request="getData()">Submit</button> 
 	</form>
 </div>
 
@@ -23,12 +26,15 @@
 	</form>
 </div>
 
+<div ></div>
+
 <scripts>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="bower_components/angular/angular.js"></script>
-	<script type="text/javascript" src="mainCtrl.js"></script>
-	<script type="text/javascript" src="mainService.js"></script>
-	<script type="text/javascript" src="myDirectives.js"></script>
+	<script src="js/app.js"></script>
+  <script type="text/javascript" src="js/mainCtrl.js"></script>
+	<script type="text/javascript" src="js/mainService.js"></script>
+	<script type="text/javascript" src="js/myDirectives.js"></script>
 </scripts>
 
 </body>
